add clear button

--- a/lesson03/src/app/app.component.html
+++ b/lesson03/src/app/app.component.html
@@ -1,9 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-     {{title}}
+    {{title}}
   </h1>
 </div>
 <br>
 <br>
 <demo-form-sku></demo-form-sku>
+<!-- <div class="container-fluid">
+  <div class="panel panel-danger">
+    <div class="panel-heading">
+      <h3 class="panel-title">知识点</h3>
+    </div>
+    <div class="panel-body">
+      <h5>ngIf内置指令</h5>
+      <h5>ngFor内部指令</h5>
+    </div>
+  </div>
+</div> -->
