--- a/lesson03/src/app/demo-form-sku/demo-form-sku.component.html
+++ b/lesson03/src/app/demo-form-sku/demo-form-sku.component.html
@@ -18,9 +18,17 @@
         <input type="text" class="form-control" id="sex" placeholder="请输入性别" name="sex" ngModel>
       </div>
     </div>
-    <div class="col-md-offset-2 col-md-10 ">
-      <button type="submit" class="btn btn-primary ">提交</button>
+    <div class=container>
+      <div class="row">
+        <div class="col-md-offset-2 col-md-2">
+          <button type="submit" class="btn btn-primary btn-block">提交</button>
+        </div>
+        <div class="col-md-offset-4 col-md-2">
+          <button type="button" class="btn btn-primary btn-block" (click)="clearSubmitted()">清除</button>
+        </div>
+      </div>
     </div>
+
   </form>
 </div>
 <!--ng 内置指令  -->
