--- a/lesson03/src/app/app.component.html
+++ b/lesson03/src/app/app.component.html
@@ -4,17 +4,10 @@
     {{title}}
   </h1>
 </div>
+<hr>
+<br>
 <br>
 <br>
 <demo-form-sku></demo-form-sku>
-<!-- <div class="container-fluid">
-  <div class="panel panel-danger">
-    <div class="panel-heading">
-      <h3 class="panel-title">知识点</h3>
-    </div>
-    <div class="panel-body">
-      <h5>ngIf内置指令</h5>
-      <h5>ngFor内部指令</h5>
-    </div>
-  </div>
-</div> -->
+<br>
+<demo-form-builder></demo-form-builder>
