添加表单监听

--- a/lesson03/src/app/demo-form-builder/demo-form-builder.component.html
+++ b/lesson03/src/app/demo-form-builder/demo-form-builder.component.html
@@ -65,7 +65,11 @@
     </div>
 
   </form>
-
+  <br>
+  <div class="container" [ngStyle]="{'text-align':'center'}">
+    <h4>{{inputName}}</h4>
+    <h4>{{inputAge}}</h4>
+  </div>
 </div>
 <!--ng 内置指令  -->
 <div class="container">
