--- a/ng-zorro-demo/src/app/layout/main/main.component.html
+++ b/ng-zorro-demo/src/app/layout/main/main.component.html
@@ -4,36 +4,32 @@
     </div>
     <ul nz-menu [nzTheme]="'dark'" [nzMode]="isCollapsed?'vertical':'inline'">
       <li nz-submenu>
-        <span title><i class="anticon anticon-user"></i><span class="nav-text">User</span></span>
+        <span title><i class="anticon anticon-user"></i><span class="nav-text">用户</span></span>
         <ul>
-          <li nz-menu-item>Tom</li>
-          <li nz-menu-item>Bill</li>
-          <li nz-menu-item>Alex</li>
+          <li nz-menu-item>詹姆斯</li>
+          <li nz-menu-item>布鲁斯</li>
+          <li nz-menu-item>拉塞尔</li>
         </ul>
       </li>
       <li nz-submenu>
-        <span title><i class="anticon anticon-team"></i><span class="nav-text">Team</span></span>
+        <span title><i class="anticon anticon-team"></i><span class="nav-text">图表</span></span>
         <ul>
-          <li nz-menu-item>Team 1</li>
-          <li nz-menu-item>Team 2</li>
+          <li nz-menu-item>饼形图</li>
+          <li nz-menu-item>折线图</li>
         </ul>
       </li>
-      <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">File</span></span></li>
+      <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">关于</span></span>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
     <nz-header style="background: #fff; padding:0;">
       <i class="anticon trigger" [class.anticon-menu-fold]="!isCollapsed" [class.anticon-menu-unfold]="isCollapsed" (click)="isCollapsed=!isCollapsed"></i>
     </nz-header>
-    <nz-content style="margin:0 16px;">
-      <nz-breadcrumb style="margin:12px 0;">
-        <nz-breadcrumb-item>User</nz-breadcrumb-item>
-        <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
-      </nz-breadcrumb>
-      <div style="height:100%;width:100%">
-        Bill is a cat.
-      </div>
+    <nz-content id="map">
+      <!-- <div id="map"></div> -->
     </nz-content>
-    <nz-footer style="text-align: center;">Ant Design ©2017 Implement By Angular</nz-footer>
+    <nz-footer style="text-align: center;">angular-leaflet By bluce
+    </nz-footer>
   </nz-layout>
 </nz-layout>
