--- a/ng-zorro-demo/src/app/layout/main/main.component.html
+++ b/ng-zorro-demo/src/app/layout/main/main.component.html
@@ -26,8 +26,8 @@
     <nz-header style="background: #fff; padding:0;">
       <i class="anticon trigger" [class.anticon-menu-fold]="!isCollapsed" [class.anticon-menu-unfold]="isCollapsed" (click)="isCollapsed=!isCollapsed"></i>
     </nz-header>
+    <!-- map容器 -->
     <nz-content id="map">
-      <!-- <div id="map"></div> -->
     </nz-content>
     <nz-footer style="text-align: center;">angular-leaflet By bluce
     </nz-footer>
