--- a/ng-zorro-cesium/src/styles.css
+++ b/ng-zorro-cesium/src/styles.css
@@ -1,10 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
-app-main {
-  width: 100%;
-  height: 100%;
-}
 nz-layout {
   width: 100%;
   height: 100%;
 }
-/* @import '../node_modules/leaflet/dist/leaflet.css'; */
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+/*隐藏Credit*/
+.cesium-viewer .cesium-widget-credits {
+  display: none !important;
+}
