--- a/ng-zorro-cesium/src/app/components/layout/layout.component.html
+++ b/ng-zorro-cesium/src/app/components/layout/layout.component.html
@@ -10,6 +10,7 @@
           <li nz-menu-item>Tom</li>
           <li nz-menu-item>Bill</li>
           <li nz-menu-item>Alex</li>
+          <qk-earth-scenesetting></qk-earth-scenesetting>
         </ul>
       </li>
       <li nz-submenu>
