完成angicon的本地化

--- a/ng-zorro-cesium/src/app/components/app.component.html
+++ b/ng-zorro-cesium/src/app/components/app.component.html
@@ -1,4 +1,4 @@
 <!--引入根组件-->
-<nz-root>
+<nz-root [nzExtraFontName]="'anticon'" [nzExtraFontUrl]="'./assets/fonts/iconfont'">
   <qk-earth-layout></qk-earth-layout>
 </nz-root>
