--- a/ng-zorro-cesium/src/app/components/layout/layout.component.html
+++ b/ng-zorro-cesium/src/app/components/layout/layout.component.html
@@ -5,22 +5,23 @@
     </div>
     <ul nz-menu [nzTheme]="'dark'" [nzMode]="isCollapsed?'vertical':'inline'">
       <li nz-submenu>
-        <span title><i class="anticon anticon-user"></i><span class="nav-text">User</span></span>
+        <span title><i class="anticon anticon-setting"></i><span class="nav-text">场景设置</span></span>
         <ul>
-          <li nz-menu-item>Tom</li>
-          <li nz-menu-item>Bill</li>
-          <li nz-menu-item>Alex</li>
           <qk-earth-scenesetting></qk-earth-scenesetting>
         </ul>
       </li>
       <li nz-submenu>
-        <span title><i class="anticon anticon-team"></i><span class="nav-text">Team</span></span>
+        <span title><i class="anticon anticon-team"></i><span class="nav-text">场景树</span></span>
         <ul>
-          <li nz-menu-item>Team 1</li>
-          <li nz-menu-item>Team 2</li>
+          <qk-earth-layer-tree></qk-earth-layer-tree>
         </ul>
       </li>
-      <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">File</span></span>
+      <li nz-submenu>
+        <span title><i class="anticon anticon-heart"></i><span class="nav-text">关于</span></span>
+        <ul>
+          <li nz-menu-item><span><i class="anticon anticon-github"></i> <span class="nav-text"><a href="https://543802360.github.io/">my Github</a></span>            </span>
+          </li>
+        </ul>
       </li>
     </ul>
   </nz-sider>
