--- a/ng-zorro-cesium/src/app/components/layout/layout.component.html
+++ b/ng-zorro-cesium/src/app/components/layout/layout.component.html
@@ -19,6 +19,28 @@
           <qk-earth-overlayer-tree></qk-earth-overlayer-tree>
         </ul>
       </li>
+
+      <!-- 倾斜摄影模型 -->
+      <li nz-submenu>
+        <span title><i class="anticon anticon-database"></i><span class="nav-text">倾斜摄影模型</span></span>
+        <ul>
+          <!-- <qk-earth-layer-tree></qk-earth-layer-tree> -->
+          <qk-earth-overlayer-tree></qk-earth-overlayer-tree>
+        </ul>
+      </li>
+
+      <!-- 图标分析 -->
+      <li nz-submenu>
+        <span title><i class="anticon anticon-area-chart"></i><span class="nav-text">图表分析</span></span>
+        <ul>
+          <!-- <qk-earth-layer-tree></qk-earth-layer-tree> -->
+          <qk-earth-overlayer-tree></qk-earth-overlayer-tree>
+        </ul>
+      </li>
+
+
+
+
       <!-- 场景设置 -->
       <li nz-submenu>
         <span title><i class="anticon anticon-setting"></i><span class="nav-text">场景设置</span></span>
