--- a/ng-zorro-cesium/src/app/components/layout/layout.component.html
+++ b/ng-zorro-cesium/src/app/components/layout/layout.component.html
@@ -25,7 +25,7 @@
         <span title><i class="anticon anticon-database"></i><span class="nav-text">倾斜摄影模型</span></span>
         <ul>
           <!-- <qk-earth-layer-tree></qk-earth-layer-tree> -->
-          <qk-earth-overlayer-tree></qk-earth-overlayer-tree>
+          <qk-earth-obliquemodel></qk-earth-obliquemodel>
         </ul>
       </li>
 
@@ -34,12 +34,9 @@
         <span title><i class="anticon anticon-area-chart"></i><span class="nav-text">图表分析</span></span>
         <ul>
           <!-- <qk-earth-layer-tree></qk-earth-layer-tree> -->
-          <qk-earth-overlayer-tree></qk-earth-overlayer-tree>
+          <qk-earth-charts></qk-earth-charts>
         </ul>
       </li>
-
-
-
 
       <!-- 场景设置 -->
       <li nz-submenu>
