--- a/ng-zorro-cesium/src/app/components/viewer/viewer.component.html
+++ b/ng-zorro-cesium/src/app/components/viewer/viewer.component.html
@@ -1,1 +1,1 @@
-<qkEarthCesiumViewer class="qk-viewer" [options]="options"></qkEarthCesiumViewer>
+<qkEarthCesiumViewer [options]="options"></qkEarthCesiumViewer>
